--- a/requirements.txt
+++ b/requirements.txt
@@ -131,9 +131,9 @@ swifter==1.3.4
 threadpoolctl==3.1.0
 tokenizers==0.13.2
 toolz==0.12.0
-torch==1.11.0+cu113
-torchaudio==0.11.0+cu113
-torchvision==0.12.0+cu113
+torch==1.11.0
+torchaudio==0.11.0
+torchvision==0.12.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.8.1
